src/sass/components/_background.scss
body::before {
    content: "";
    width: 100vw;
    height: 100vh;
    background: rgb(21, 21, 23);
    background: linear-gradient(150deg, rgba(15, 15, 15, 0.9) 50%, rgba(21, 21, 24, 0.6) 100%), url('src/assets/Background.jpg');
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;

    position: absolute;
    top: 0;
    left: 0;
    z-index: -1;
}

